# QClientApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: build.cmake
cpp/client/: Client.cpp  Client.h  GrpcClientAdapter.cpp  GrpcClientAdapter.h  IClientAdapater.h  ParamObject.cpp  ParamObject.h
cpp/models/: QmlObjectListModel.cpp  QmlObjectListModel.h
qml/: Client.qml  Main.qml
scripts/: generate_test_coverage.sh  qmllint.sh  test_env.sh  tests_integration_client.sh  tests_integration_main.sh  tests_unit.sh
tests/: CMakeLists.txt
tests/cpp/integration/: GrpcClientAdapterTest.cpp
tests/cpp/mock/: ClientAdapterMock.h
tests/cpp/unit/client/: ClientTest.cpp  Main.cpp  ParamObjectTest.cpp
tests/cpp/unit/models/: QmlObjectListModelTest.cpp
tests/qml/integration/: ClientTest.qml  MainTest.qml
tests/qml/mock/Plugins/Client/: Client.qml  qmldir
tests/qml/unit/: ClientTest.qml
